--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     env_file:
       - ./.env
     ports:
-      - 5439:5432
+      - $DB_PORT:5432
     container_name: chr_db
 
   # Django Application
